--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>Barbershop</title>
   </head>
   <body>
-    <header></header>
-    <main>
-      <a href=""
-        ><img src="./images/logo.svg" alt="Logotype of Barbershop" width="69" height="55"
-      /></a>
-    </main>
+    <header>
+      <nav>
+        <a href=""
+          ><img src="./images/logo.svg" alt="Logotype of Barbershop" width="69" height="55"
+        /></a>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Services and prices</a></li>
+          <li><a href="">Barbers</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <a href="tel:+380441111111">+38 044 111 11 11</a>
+      <button type="button">Online-booking</button>
+    </header>
+    <main></main>
     <footer></footer>
   </body>
 </html>
