--- a/index.html
+++ b/index.html
@@ -21,7 +21,62 @@
       <a href="tel:+380441111111">+38 044 111 11 11</a>
       <button type="button">Online-booking</button>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <aside>
+          <ul>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Youtube</a></li>
+          </ul>
+        </aside>
+        <div>
+          <p>A hair salon for men in Kyiv</p>
+          <h1>BarberShop</h1>
+          <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+        </div>
+      </section>
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <table>
+          <tr>
+            <td>Men’s haircut</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Beard trim</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Mustache trim</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Straight razor shave</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <td>Trainee’s haircut</td>
+            <td>from 50 uah.</td>
+          </tr>
+          <tr>
+            <td>Haircut under the nozzle</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Children’s haircut (0-12 y.o.)</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Camouflage of gray hair</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <button type="button">online-booking</button>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
