Sections were added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,143 @@
         </table>
         <button type="button">online-booking</button>
       </section>
+      <section>
+        <ul>
+          <li>
+            <p>600</p>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <p>50</p>
+            <p>Awards for excellent service</p>
+          </li>
+          <li>
+            <p>20</p>
+            <p>Kyiv’s best barbers</p>
+          </li>
+          <li>
+            <p>100</p>
+            <p>Gifts for regular customers</p>
+          </li>
+        </ul>
+        <p>Old traditional school</p>
+        <h2>¿Why people come to us?</h2>
+        <p>
+          Only good things are said about us. But it's better to see and feel 1 time than read 10
+          times.
+        </p>
+      </section>
+      <section>
+        <p>For true enjoyers of the atmosphere</p>
+        <h2>Our barbers</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/barbers/john-smith.jpg"
+              alt="The barber is cutting a client"
+              width="370"
+              height="346"
+            />
+            <h3>John Smith</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./images/barbers/michele-doe.jpg"
+              alt="The barber is cutting a client"
+              width="370"
+              height="346"
+            />
+            <h3>Michele Doe</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./images/barbers/alan-black.jpg"
+              alt="The barber is cutting a client"
+              width="370"
+              height="346"
+            />
+            <h3>Alan Black</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 hidden>Examples of work</h2>
+        <p>In Latin, "barba" means "beard"</p>
+        <ul>
+          <li>
+            <img
+              src="./images/examples-of-work/example-1.jpg"
+              alt="The barber is cutting a client"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-work/example-2.jpg"
+              alt="The barber is shaving a client"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-work/example-3.jpg"
+              alt="The barber is shaving a client"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/examples-of-work/example-4.jpg"
+              alt="The barber is cutting a client"
+              width="270"
+              height="360"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/r9EjJK3pBZ1xSPhZ7"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Darnytska Square, 1, Kyiv</a
+              >
+            </li>
+            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+            <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+          </ul>
+        </address>
+        <h3>Working hours</h3>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
     </main>
     <footer></footer>
   </body>
