--- a/index.html
+++ b/index.html
@@ -36,6 +36,36 @@
         </div>
       </section>
       <section>
+        <ul>
+          <li>
+            <img
+              src="./images/about/about-img1.jpg"
+              alt="A barber is shaving a client"
+              width="270"
+              height="445"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/about/about-img2.jpg"
+              alt="A barber is shaving a client"
+              width="270"
+              height="445"
+            />
+          </li>
+        </ul>
+        <p>About</p>
+        <h2>Best Barbershop in your city</h2>
+        <p>If you want to add more confidence to your image, you should definitely visit us.</p>
+        <p>
+          We are a team that never stops at what has been achieved and are thirsty for changes. And
+          when you fall into the hands of our master, you will never be the same again. We are a
+          team that is always "on the same wave" with clients. Therefore, we are always ready to
+          improve everyone who comes to us!
+        </p>
+        <button type="button">Online-booking</button>
+      </section>
+      <!-- <section>
         <p>Spend your time with the best masters</p>
         <h2>Services and prices</h2>
         <table>
@@ -75,28 +105,69 @@
           </tr>
         </table>
         <button type="button">online-booking</button>
+      </section> -->
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <ul>
+          <li>
+            <p>Men’s haircut</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Beard trim</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Mustache trim</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Straight razor shave</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p>Trainee’s haircut</p>
+            <p>from 50 uah.</p>
+          </li>
+          <li>
+            <p>Haircut under the nozzle</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Children’s haircut (0-12 y.o.)</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Camouflage of gray hair</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <button type="button">Online-booking</button>
       </section>
       <section>
         <ul>
           <li>
-            <p>600</p>
+            <span>600</span>
             <p>Satisfied customers per day</p>
           </li>
           <li>
-            <p>50</p>
+            <span>50</span>
             <p>Awards for excellent service</p>
           </li>
           <li>
-            <p>20</p>
+            <span>20</span>
             <p>Kyiv’s best barbers</p>
           </li>
           <li>
-            <p>100</p>
+            <span>100</span>
             <p>Gifts for regular customers</p>
           </li>
         </ul>
         <p>Old traditional school</p>
-        <h2>¿Why people come to us?</h2>
+        <h2>&iquest;Why people come to us?</h2>
         <p>
           Only good things are said about us. But it's better to see and feel 1 time than read 10
           times.
