Footer was added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barbershop</title>
+    <title>Barbershop&#128136;</title>
   </head>
   <body>
     <header>
@@ -265,6 +265,7 @@
           </li>
         </ul>
       </section>
+      <section><h2>Online-booking</h2></section>
       <section>
         <h2>Contacts</h2>
         <address>
@@ -285,6 +286,12 @@
         <p>Every day from 9:00 to 22:00</p>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&copy; Copyright 2020</p>
+      <ul>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Youtube</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
