CSS was initialed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <header>
       <nav>
         <a href=""
-          ><img src="./images/logo.svg" alt="Logotype of Barbershop" width="69" height="55"
+          ><img
+            src="./images/logo.svg"
+            alt="Logotype of Barbershop"
+            width="69"
+            height="55"
         /></a>
         <ul>
           <li><a href="">About</a></li>
@@ -32,7 +36,10 @@
         <div>
           <p>A hair salon for men in Kyiv</p>
           <h1>BarberShop</h1>
-          <p>We are experts in trendy men’s haircuts. We work quickly, carefully and with style.</p>
+          <p>
+            We are experts in trendy men’s haircuts. We work quickly, carefully
+            and with style.
+          </p>
         </div>
       </section>
       <section>
@@ -56,12 +63,16 @@
         </ul>
         <p>About</p>
         <h2>Best Barbershop in your city</h2>
-        <p>If you want to add more confidence to your image, you should definitely visit us.</p>
         <p>
-          We are a team that never stops at what has been achieved and are thirsty for changes. And
-          when you fall into the hands of our master, you will never be the same again. We are a
-          team that is always "on the same wave" with clients. Therefore, we are always ready to
-          improve everyone who comes to us!
+          If you want to add more confidence to your image, you should
+          definitely visit us.
+        </p>
+        <p>
+          We are a team that never stops at what has been achieved and are
+          thirsty for changes. And when you fall into the hands of our master,
+          you will never be the same again. We are a team that is always "on the
+          same wave" with clients. Therefore, we are always ready to improve
+          everyone who comes to us!
         </p>
         <button type="button">Online-booking</button>
       </section>
@@ -169,8 +180,8 @@
         <p>Old traditional school</p>
         <h2>&iquest;Why people come to us?</h2>
         <p>
-          Only good things are said about us. But it's better to see and feel 1 time than read 10
-          times.
+          Only good things are said about us. But it's better to see and feel 1
+          time than read 10 times.
         </p>
       </section>
       <section>
@@ -279,7 +290,9 @@
               >
             </li>
             <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-            <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+            <li>
+              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            </li>
           </ul>
         </address>
         <h3>Working hours</h3>
