--- a/index.html
+++ b/index.html
@@ -3,34 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Barbershop&#128136;</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href=""
+        <a href="" class="link logo"
           ><img
             src="./images/logo.svg"
             alt="Logotype of Barbershop"
             width="69"
             height="55"
         /></a>
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Services and prices</a></li>
-          <li><a href="">Barbers</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li class="list-item"><a href="" class="link">About</a></li>
+          <li class="list-item">
+            <a href="" class="link">Services and prices</a>
+          </li>
+          <li class="list-item"><a href="" class="link">Barbers</a></li>
+          <li class="list-item"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
+      <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
       <button type="button">Online-booking</button>
     </header>
     <main>
       <section>
         <aside>
-          <ul>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Youtube</a></li>
+          <ul class="list">
+            <li class="list-item"><a href="" class="link">Instagram</a></li>
+            <li class="list-item"><a href="" class="link">Youtube</a></li>
           </ul>
         </aside>
         <div>
@@ -43,8 +46,8 @@
         </div>
       </section>
       <section>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <img
               src="./images/about/about-img1.jpg"
               alt="A barber is shaving a client"
@@ -52,7 +55,7 @@
               height="445"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/about/about-img2.jpg"
               alt="A barber is shaving a client"
@@ -120,38 +123,38 @@
       <section>
         <p>Spend your time with the best masters</p>
         <h2>Services and prices</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <p>Men’s haircut</p>
             <p>from 300 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Beard trim</p>
             <p>from 300 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Mustache trim</p>
             <p>from 200 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Straight razor shave</p>
             <p>from 200 uah.</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <p>Trainee’s haircut</p>
             <p>from 50 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Haircut under the nozzle</p>
             <p>from 200 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Children’s haircut (0-12 y.o.)</p>
             <p>from 300 uah.</p>
           </li>
-          <li>
+          <li class="list-item">
             <p>Camouflage of gray hair</p>
             <p>from 200 uah.</p>
           </li>
@@ -159,20 +162,20 @@
         <button type="button">Online-booking</button>
       </section>
       <section>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <span>600</span>
             <p>Satisfied customers per day</p>
           </li>
-          <li>
+          <li class="list-item">
             <span>50</span>
             <p>Awards for excellent service</p>
           </li>
-          <li>
+          <li class="list-item">
             <span>20</span>
             <p>Kyiv’s best barbers</p>
           </li>
-          <li>
+          <li class="list-item">
             <span>100</span>
             <p>Gifts for regular customers</p>
           </li>
@@ -187,8 +190,8 @@
       <section>
         <p>For true enjoyers of the atmosphere</p>
         <h2>Our barbers</h2>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <img
               src="./images/barbers/john-smith.jpg"
               alt="The barber is cutting a client"
@@ -197,14 +200,14 @@
             />
             <h3>John Smith</h3>
             <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <ul class="list">
+              <li class="list-item"><a href=""></a></li>
+              <li class="list-item"><a href=""></a></li>
+              <li class="list-item"><a href=""></a></li>
+              <li class="list-item"><a href=""></a></li>
             </ul>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/barbers/michele-doe.jpg"
               alt="The barber is cutting a client"
@@ -213,14 +216,14 @@
             />
             <h3>Michele Doe</h3>
             <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <ul class="list">
+              <li><a href="" class="link"></a></li>
+              <li><a href="" class="link"></a></li>
+              <li><a href="" class="link"></a></li>
+              <li><a href="" class="link"></a></li>
             </ul>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/barbers/alan-black.jpg"
               alt="The barber is cutting a client"
@@ -229,11 +232,11 @@
             />
             <h3>Alan Black</h3>
             <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <ul class="list">
+              <li class="list-item"><a href="" class="link"></a></li>
+              <li class="list-item"><a href="" class="link"></a></li>
+              <li class="list-item"><a href="" class="link"></a></li>
+              <li class="list-item"><a href="" class="link"></a></li>
             </ul>
           </li>
         </ul>
@@ -241,8 +244,8 @@
       <section>
         <h2 hidden>Examples of work</h2>
         <p>In Latin, "barba" means "beard"</p>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="list-item">
             <img
               src="./images/examples-of-work/example-1.jpg"
               alt="The barber is cutting a client"
@@ -250,7 +253,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/examples-of-work/example-2.jpg"
               alt="The barber is shaving a client"
@@ -258,7 +261,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/examples-of-work/example-3.jpg"
               alt="The barber is shaving a client"
@@ -266,7 +269,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/examples-of-work/example-4.jpg"
               alt="The barber is cutting a client"
@@ -280,18 +283,23 @@
       <section>
         <h2>Contacts</h2>
         <address>
-          <ul>
-            <li>
+          <ul class="list">
+            <li class="list-item">
               <a
                 href="https://maps.app.goo.gl/r9EjJK3pBZ1xSPhZ7"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="link"
                 >Darnytska Square, 1, Kyiv</a
               >
             </li>
-            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-            <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            <li class="list-item">
+              <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
+            </li>
+            <li class="list-item">
+              <a href="mailto:barbershop@email.com" class="link"
+                >barbershop@email.com</a
+              >
             </li>
           </ul>
         </address>
@@ -301,9 +309,9 @@
     </main>
     <footer>
       <p>&copy; Copyright 2020</p>
-      <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Youtube</a></li>
+      <ul class="list">
+        <li class="list-item"><a href="" class="link">Instagram</a></li>
+        <li class="list-item"><a href="" class="link">Youtube</a></li>
       </ul>
     </footer>
   </body>
