--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
-      <button type="button">Online-booking</button>
+      <button type="button" class="btn dark">Online-booking</button>
     </header>
     <main>
       <section>
@@ -77,7 +77,7 @@
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button">Online-booking</button>
+        <button type="button" class="btn">Online-booking</button>
       </section>
       <!-- <section>
         <p>Spend your time with the best masters</p>
@@ -159,7 +159,7 @@
             <p>from 200 uah.</p>
           </li>
         </ul>
-        <button type="button">Online-booking</button>
+        <button type="button" class="btn dark">Online-booking</button>
       </section>
       <section>
         <ul class="list">
