Fonts were added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>Barbershop&#128136;</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -32,12 +38,14 @@
       <section>
         <aside>
           <ul class="list">
-            <li class="list-item"><a href="" class="link">Instagram</a></li>
-            <li class="list-item"><a href="" class="link">Youtube</a></li>
+            <li class="list-item aside">
+              <a href="" class="link">Instagram</a>
+            </li>
+            <li class="list-item aside"><a href="" class="link">Youtube</a></li>
           </ul>
         </aside>
         <div>
-          <p>A hair salon for men in Kyiv</p>
+          <p class="overline">A hair salon for men in Kyiv</p>
           <h1>BarberShop</h1>
           <p>
             We are experts in trendy men’s haircuts. We work quickly, carefully
@@ -64,13 +72,13 @@
             />
           </li>
         </ul>
-        <p>About</p>
+        <p class="overline">About</p>
         <h2>Best Barbershop in your city</h2>
         <p>
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <p>
+        <p class="text">
           We are a team that never stops at what has been achieved and are
           thirsty for changes. And when you fall into the hands of our master,
           you will never be the same again. We are a team that is always "on the
@@ -121,7 +129,7 @@
         <button type="button">online-booking</button>
       </section> -->
       <section>
-        <p>Spend your time with the best masters</p>
+        <p class="overline">Spend your time with the best masters</p>
         <h2>Services and prices</h2>
         <ul class="list">
           <li class="list-item">
@@ -180,7 +188,7 @@
             <p>Gifts for regular customers</p>
           </li>
         </ul>
-        <p>Old traditional school</p>
+        <p class="overline">Old traditional school</p>
         <h2>&iquest;Why people come to us?</h2>
         <p>
           Only good things are said about us. But it's better to see and feel 1
@@ -188,7 +196,7 @@
         </p>
       </section>
       <section>
-        <p>For true enjoyers of the atmosphere</p>
+        <p class="overline">For true enjoyers of the atmosphere</p>
         <h2>Our barbers</h2>
         <ul class="list">
           <li class="list-item">
@@ -243,7 +251,7 @@
       </section>
       <section>
         <h2 hidden>Examples of work</h2>
-        <p>In Latin, "barba" means "beard"</p>
+        <p class="overline">In Latin, "barba" means "beard"</p>
         <ul class="list">
           <li class="list-item">
             <img
@@ -303,15 +311,15 @@
             </li>
           </ul>
         </address>
-        <h3>Working hours</h3>
+        <p class="overline">Working hours</p>
         <p>Every day from 9:00 to 22:00</p>
       </section>
     </main>
     <footer>
-      <p>&copy; Copyright 2020</p>
+      <p class="aside">&copy; Copyright 2020</p>
       <ul class="list">
-        <li class="list-item"><a href="" class="link">Instagram</a></li>
-        <li class="list-item"><a href="" class="link">Youtube</a></li>
+        <li class="list-item aside"><a href="" class="link">Instagram</a></li>
+        <li class="list-item aside"><a href="" class="link">Youtube</a></li>
       </ul>
     </footer>
   </body>
