--- a/index.html
+++ b/index.html
@@ -15,39 +15,51 @@
   <body>
     <header>
       <nav>
-        <a href="" class="link logo"
+        <a href="#" class="link logo"
           ><img
             src="./images/logo.svg"
             alt="Logotype of Barbershop"
             width="69"
             height="55"
         /></a>
-        <ul class="list">
-          <li class="list-item"><a href="" class="link">About</a></li>
-          <li class="list-item">
-            <a href="" class="link">Services and prices</a>
+        <ul class="list menu">
+          <li class="menu-item">
+            <a href="#" class="link menu-link">About</a>
           </li>
-          <li class="list-item"><a href="" class="link">Barbers</a></li>
-          <li class="list-item"><a href="" class="link">Contacts</a></li>
+          <li class="menu-item">
+            <a href="#" class="link menu-link">Services and prices</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="link menu-link">Barbers</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="link menu-link">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
-      <button type="button" class="btn dark">Online-booking</button>
+      <a href="tel:+380441111111" class="link menu-link">+38 044 111 11 11</a>
+      <button type="button" class="btn modal-btn btn-theme-dark">
+        Online-booking
+      </button>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <aside>
-          <ul class="list">
-            <li class="list-item aside">
-              <a href="" class="link">Instagram</a>
+          <ul class="list follow-list">
+            <li class="list-item follow-item">
+              <a href="" class="link follow-link">Instagram</a>
             </li>
-            <li class="list-item aside"><a href="" class="link">Youtube</a></li>
+            <li class="list-item follow-item">
+              <a href="" class="link follow-link">Youtube</a>
+            </li>
           </ul>
         </aside>
         <div>
-          <p class="overline">A hair salon for men in Kyiv</p>
-          <h1>BarberShop</h1>
-          <p>
+          <p class="overline overline-theme-dark">
+            A hair salon for men in Kyiv
+          </p>
+          <h1 class="hero-title title-theme-dark">BarberShop</h1>
+          <p class="subtitle subtitle-theme-dark">
             We are experts in trendy men’s haircuts. We work quickly, carefully
             and with style.
           </p>
@@ -72,9 +84,9 @@
             />
           </li>
         </ul>
-        <p class="overline">About</p>
+        <p class="overline overline-theme-light">About</p>
         <h2>Best Barbershop in your city</h2>
-        <p>
+        <p class="subtitle subtitle-theme-light">
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
@@ -85,7 +97,9 @@
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button" class="btn">Online-booking</button>
+        <button type="button" class="btn btn-theme-light">
+          Online-booking
+        </button>
       </section>
       <!-- <section>
         <p>Spend your time with the best masters</p>
@@ -129,8 +143,10 @@
         <button type="button">online-booking</button>
       </section> -->
       <section>
-        <p class="overline">Spend your time with the best masters</p>
-        <h2>Services and prices</h2>
+        <p class="overline .overline-theme-dark">
+          Spend your time with the best masters
+        </p>
+        <h2 class="title-theme-dark">Services and prices</h2>
         <ul class="list">
           <li class="list-item">
             <p>Men’s haircut</p>
@@ -167,7 +183,7 @@
             <p>from 200 uah.</p>
           </li>
         </ul>
-        <button type="button" class="btn dark">Online-booking</button>
+        <button type="button" class="btn btn-theme-dark">Online-booking</button>
       </section>
       <section>
         <ul class="list">
@@ -188,15 +204,17 @@
             <p>Gifts for regular customers</p>
           </li>
         </ul>
-        <p class="overline">Old traditional school</p>
+        <p class="overline overline-theme-light">Old traditional school</p>
         <h2>&iquest;Why people come to us?</h2>
-        <p>
+        <p class="subtitle subtitle-theme-light">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
       </section>
       <section>
-        <p class="overline">For true enjoyers of the atmosphere</p>
+        <p class="overline overline-theme-light">
+          For true enjoyers of the atmosphere
+        </p>
         <h2>Our barbers</h2>
         <ul class="list">
           <li class="list-item">
@@ -251,7 +269,9 @@
       </section>
       <section>
         <h2 hidden>Examples of work</h2>
-        <p class="overline">In Latin, "barba" means "beard"</p>
+        <p class="overline overline-theme-light">
+          In Latin, "barba" means "beard"
+        </p>
         <ul class="list">
           <li class="list-item">
             <img
@@ -287,9 +307,9 @@
           </li>
         </ul>
       </section>
-      <section><h2>Online-booking</h2></section>
+      <section><h2 class="title-theme-dark">Online-booking</h2></section>
       <section>
-        <h2>Contacts</h2>
+        <h2 class="title-theme-dark">Contacts</h2>
         <address>
           <ul class="list">
             <li class="list-item">
@@ -305,21 +325,25 @@
               <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
             </li>
             <li class="list-item">
-              <a href="mailto:barbershop@email.com" class="link"
+              <a href="mailto:barbershop@email.com" class="el-link"
                 >barbershop@email.com</a
               >
             </li>
           </ul>
         </address>
-        <p class="overline">Working hours</p>
+        <p class="overline title-theme-dark">Working hours</p>
         <p>Every day from 9:00 to 22:00</p>
       </section>
     </main>
     <footer>
-      <p class="aside">&copy; Copyright 2020</p>
-      <ul class="list">
-        <li class="list-item aside"><a href="" class="link">Instagram</a></li>
-        <li class="list-item aside"><a href="" class="link">Youtube</a></li>
+      <p class="copyright">&copy; Copyright 2020</p>
+      <ul class="list follow-list">
+        <li class="list-item follow-item">
+          <a href="#" class="link follow-link">Instagram</a>
+        </li>
+        <li class="list-item follow-item">
+          <a href="#" class="link follow-link">Youtube</a>
+        </li>
       </ul>
     </footer>
   </body>
