--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </ul>
       </section>
       <section>
-        <h2 hidden>Examples of work</h2>
+        <h2 class="visually-hidden">Examples of work</h2>
         <p class="overline overline-theme-light">
           In Latin, "barba" means "beard"
         </p>
