--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <p class="overline overline-theme-light">About</p>
-        <h2>Best Barbershop in your city</h2>
+        <h2 class="section-title">Best Barbershop in your city</h2>
         <p class="subtitle subtitle-theme-light">
           If you want to add more confidence to your image, you should
           definitely visit us.
@@ -108,121 +108,82 @@
           Online-booking
         </button>
       </section>
-      <!-- <section>
-        <p>Spend your time with the best masters</p>
-        <h2>Services and prices</h2>
-        <table>
-          <tr>
-            <td>Men’s haircut</td>
-            <td>from 300 uah.</td>
-          </tr>
-          <tr>
-            <td>Beard trim</td>
-            <td>from 300 uah.</td>
-          </tr>
-          <tr>
-            <td>Mustache trim</td>
-            <td>from 200 uah.</td>
-          </tr>
-          <tr>
-            <td>Straight razor shave</td>
-            <td>from 200 uah.</td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td>Trainee’s haircut</td>
-            <td>from 50 uah.</td>
-          </tr>
-          <tr>
-            <td>Haircut under the nozzle</td>
-            <td>from 200 uah.</td>
-          </tr>
-          <tr>
-            <td>Children’s haircut (0-12 y.o.)</td>
-            <td>from 300 uah.</td>
-          </tr>
-          <tr>
-            <td>Camouflage of gray hair</td>
-            <td>from 200 uah.</td>
-          </tr>
-        </table>
-        <button type="button">online-booking</button>
-      </section> -->
-      <section>
-        <p class="overline .overline-theme-dark">
+      <section class="services">
+        <p class="overline overline-theme-dark">
           Spend your time with the best masters
         </p>
-        <h2 class="title-theme-dark">Services and prices</h2>
+        <h2 class="section-title title-theme-dark">Services and prices</h2>
         <ul class="list">
           <li class="list-item">
-            <p>Men’s haircut</p>
-            <p>from 300 uah.</p>
+            <p class="services-text">Men’s haircut</p>
+            <p class="services-text">from 300 uah.</p>
           </li>
           <li class="list-item">
-            <p>Beard trim</p>
-            <p>from 300 uah.</p>
+            <p class="services-text">Beard trim</p>
+            <p class="services-text">from 300 uah.</p>
           </li>
           <li class="list-item">
-            <p>Mustache trim</p>
-            <p>from 200 uah.</p>
+            <p class="services-text">Mustache trim</p>
+            <p class="services-text">from 200 uah.</p>
           </li>
           <li class="list-item">
-            <p>Straight razor shave</p>
-            <p>from 200 uah.</p>
+            <p class="services-text">Straight razor shave</p>
+            <p class="services-text">from 200 uah.</p>
           </li>
         </ul>
         <ul class="list">
           <li class="list-item">
-            <p>Trainee’s haircut</p>
-            <p>from 50 uah.</p>
+            <p class="services-text">Trainee’s haircut</p>
+            <p class="services-text">from 50 uah.</p>
           </li>
           <li class="list-item">
-            <p>Haircut under the nozzle</p>
-            <p>from 200 uah.</p>
+            <p class="services-text">Haircut under the nozzle</p>
+            <p class="services-text">from 200 uah.</p>
           </li>
           <li class="list-item">
-            <p>Children’s haircut (0-12 y.o.)</p>
-            <p>from 300 uah.</p>
+            <p class="services-text">Children’s haircut (0-12 y.o.)</p>
+            <p class="services-text">from 300 uah.</p>
           </li>
           <li class="list-item">
-            <p>Camouflage of gray hair</p>
-            <p>from 200 uah.</p>
+            <p class="services-text">Camouflage of gray hair</p>
+            <p class="services-text">from 200 uah.</p>
           </li>
         </ul>
         <button type="button" class="btn btn-theme-dark">Online-booking</button>
       </section>
-      <section>
+      <section class="advantages">
         <ul class="list">
           <li class="list-item">
-            <span>600</span>
-            <p>Satisfied customers per day</p>
+            <span class="advantages-title">600</span>
+            <p class="advantages-overline">Satisfied customers per day</p>
           </li>
           <li class="list-item">
-            <span>50</span>
-            <p>Awards for excellent service</p>
+            <span class="advantages-title">50</span>
+            <p class="advantages-overline">Awards for excellent service</p>
           </li>
           <li class="list-item">
-            <span>20</span>
-            <p>Kyiv’s best barbers</p>
+            <span class="advantages-title">20</span>
+            <p class="advantages-overline">Kyiv’s best barbers</p>
           </li>
           <li class="list-item">
-            <span>100</span>
-            <p>Gifts for regular customers</p>
+            <span class="advantages-title">100</span>
+            <p class="advantages-overline">Gifts for regular customers</p>
           </li>
         </ul>
-        <p class="overline overline-theme-light">Old traditional school</p>
+        <p class="advantages-overline overline-theme-light">
+          Old traditional school
+        </p>
         <h2>&iquest;Why people come to us?</h2>
         <p class="subtitle subtitle-theme-light">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
       </section>
-      <section>
+      <section class="barbers">
         <p class="overline overline-theme-light">
           For true enjoyers of the atmosphere
         </p>
-        <h2>Our barbers</h2>
+        <h2 class="section-title">Our barbers</h2>
         <ul class="list">
           <li class="list-item">
             <img
@@ -231,8 +192,8 @@
               width="370"
               height="346"
             />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barber-master">John Smith</h3>
+            <p class="barber-subtitle">Extreme Barber</p>
             <ul class="list">
               <li class="list-item"><a href=""></a></li>
               <li class="list-item"><a href=""></a></li>
@@ -247,8 +208,8 @@
               width="370"
               height="346"
             />
-            <h3>Michele Doe</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barber-master">Michele Doe</h3>
+            <p class="barber-subtitle">Extreme Barber</p>
             <ul class="list">
               <li><a href="" class="link"></a></li>
               <li><a href="" class="link"></a></li>
@@ -263,8 +224,8 @@
               width="370"
               height="346"
             />
-            <h3>Alan Black</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barber-master">Alan Black</h3>
+            <p class="barber-subtitle">Extreme Barber</p>
             <ul class="list">
               <li class="list-item"><a href="" class="link"></a></li>
               <li class="list-item"><a href="" class="link"></a></li>
@@ -314,9 +275,11 @@
           </li>
         </ul>
       </section>
-      <section><h2 class="title-theme-dark">Online-booking</h2></section>
-      <section>
-        <h2 class="title-theme-dark">Contacts</h2>
+      <section class="booking">
+        <h2 class="section-title title-theme-dark">Online-booking</h2>
+      </section>
+      <section class="contacts">
+        <h2 class="section-title title-theme-dark">Contacts</h2>
         <address>
           <ul class="list">
             <li class="list-item">
@@ -324,22 +287,24 @@
                 href="https://maps.app.goo.gl/r9EjJK3pBZ1xSPhZ7"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="link"
+                class="link address-text"
                 >Darnytska Square, 1, Kyiv</a
               >
             </li>
             <li class="list-item">
-              <a href="tel:+380441111111" class="link">+38 044 111 11 11</a>
+              <a href="tel:+380441111111" class="link info-text"
+                >+38 044 111 11 11</a
+              >
             </li>
             <li class="list-item">
-              <a href="mailto:barbershop@email.com" class="el-link"
+              <a href="mailto:barbershop@email.com" class="el-link info-text"
                 >barbershop@email.com</a
               >
             </li>
           </ul>
         </address>
         <p class="overline title-theme-dark">Working hours</p>
-        <p>Every day from 9:00 to 22:00</p>
+        <p class="info-text">Every day from 9:00 to 22:00</p>
       </section>
     </main>
     <footer>
