--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container header-container">
+        <a href="#" class="link logo"
+          ><img
+            src="./images/logo.svg"
+            alt="Logotype of Barbershop"
+            width="70"
+            height="56"
+        /></a>
         <nav>
-          <a href="#" class="link logo"
-            ><img
-              src="./images/logo.svg"
-              alt="Logotype of Barbershop"
-              width="69"
-              height="55"
-          /></a>
           <ul class="list menu">
             <li class="menu-item">
               <a href="#" class="link menu-link">About</a>
@@ -45,10 +45,14 @@
             </li>
           </ul>
         </nav>
-        <a href="tel:+380441111111" class="link menu-link">+38 044 111 11 11</a>
-        <button type="button" class="btn modal-btn btn-theme-dark">
-          Online-booking
-        </button>
+        <div class="contact-wrapper">
+          <a href="tel:+380441111111" class="link menu-link"
+            >+38 044 111 11 11</a
+          >
+          <button type="button" class="btn modal-btn btn-theme-dark">
+            Online-booking
+          </button>
+        </div>
       </div>
     </header>
     <main>
