--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </li>
             </ul>
           </aside>
-          <div>
+          <div class="hero-wrapper">
             <p class="overline overline-theme-dark">
               A hair salon for men in Kyiv
             </p>
@@ -307,14 +307,13 @@
           </ul>
         </div>
       </section>
-      <div class="section-wrapper">
-        <section class="booking">
-          <div class="container">
+
+      <section class="booking-contacts">
+        <div class="container wrapper">
+          <div class="booking">
             <h2 class="section-title title-theme-dark">Online-booking</h2>
           </div>
-        </section>
-        <section class="contacts">
-          <div class="container">
+          <div class="contacts">
             <h2 class="section-title title-theme-dark">Contacts</h2>
             <address>
               <ul class="list">
@@ -344,8 +343,8 @@
             <p class="overline title-theme-dark">Working hours</p>
             <p class="info-text">Every day from 9:00 to 22:00</p>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="container footer-wrapper">
