--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container hero-wrapper">
           <aside>
             <ul class="list follow-list">
               <li class="list-item follow-item">
@@ -68,19 +68,21 @@
               </li>
             </ul>
           </aside>
-          <div class="hero-wrapper">
-            <p class="overline overline-theme-dark">
-              A hair salon for men in Kyiv
-            </p>
-            <h1 class="hero-title title-theme-dark">BarberShop</h1>
-            <p class="subtitle subtitle-theme-dark">
-              We are experts in trendy men’s haircuts. We work quickly,
-              carefully and with style.
-            </p>
+          <div class="hero-content-wrapper">
+            <div class="hero-content">
+              <p class="overline overline-theme-dark">
+                A hair salon for men in Kyiv
+              </p>
+              <h1 class="hero-title title-theme-dark">BarberShop</h1>
+              <p class="subtitle subtitle-theme-dark">
+                We are experts in trendy men’s haircuts. We work quickly,
+                carefully and with style.
+              </p>
+            </div>
           </div>
         </div>
       </section>
-      <section class="about">
+      <section class="about section">
         <div class="container about-wrapper">
           <ul class="list about-image-wrapper">
             <li class="list-item">
@@ -120,7 +122,7 @@
           </div>
         </div>
       </section>
-      <section class="services">
+      <section class="services section">
         <div class="container">
           <p class="overline overline-theme-dark">
             Spend your time with the best masters
@@ -169,7 +171,7 @@
           </button>
         </div>
       </section>
-      <section class="advantages">
+      <section class="advantages section">
         <div class="container advantages-wrapper">
           <ul class="list advantages-number-wrapper">
             <li class="list-item">
@@ -201,7 +203,7 @@
           </div>
         </div>
       </section>
-      <section class="barbers">
+      <section class="barbers section">
         <div class="container">
           <p class="overline overline-theme-light">
             For true enjoyers of the atmosphere
@@ -265,7 +267,7 @@
           </ul>
         </div>
       </section>
-      <section class="works">
+      <section class="works section">
         <div class="container">
           <h2 class="visually-hidden">Examples of work</h2>
           <p class="overline overline-theme-light">
@@ -308,7 +310,7 @@
         </div>
       </section>
 
-      <section class="booking-contacts">
+      <section class="booking-contacts section">
         <div class="container wrapper">
           <div class="booking">
             <h2 class="section-title title-theme-dark">Online-booking</h2>
