--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <section class="hero">
         <div class="container hero-wrapper">
-          <aside>
+          <aside class="aside">
             <ul class="list follow-list">
               <li class="list-item follow-item">
                 <a href="" class="link follow-link">Instagram</a>
