--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="container header-container">
+    <header class="page-header">
+      <div class="container header-wrapper">
         <a href="#" class="link logo"
           ><img
             src="./images/logo.svg"
