--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <section class="about section">
         <div class="container about-wrapper">
           <ul class="list about-image-wrapper">
-            <li class="list-item">
+            <li class="list-item about-item">
               <img
                 src="./images/about/about-img1.jpg"
                 alt="A barber is shaving a client"
@@ -98,7 +98,7 @@
               />
             </li>
 
-            <li class="list-item">
+            <li class="list-item about-item">
               <img
                 src="./images/about/about-img2.jpg"
                 alt="A barber is shaving a client"
