--- a/index.html
+++ b/index.html
@@ -183,41 +183,45 @@
         </div>
       </section>
       <section class="advantages section">
-        <div class="container advantages-wrapper">
-          <ul class="list advantages-number-wrapper">
-            <li class="list-item">
-              <span class="advantages-title">600</span>
-              <p class="overline advantages-overline">
-                Satisfied customers per day
-              </p>
-            </li>
+        <div class="container">
+          <div class="advantages-wrapper">
+            <ul class="list advantages-number-wrapper">
+              <li class="list-item">
+                <span class="advantages-title">600</span>
+                <p class="overline advantages-overline">
+                  Satisfied customers per day
+                </p>
+              </li>
 
-            <li class="list-item">
-              <span class="advantages-title">50</span>
-              <p class="overline advantages-overline">
-                Awards for excellent service
-              </p>
-            </li>
+              <li class="list-item">
+                <span class="advantages-title">50</span>
+                <p class="overline advantages-overline">
+                  Awards for excellent service
+                </p>
+              </li>
 
-            <li class="list-item">
-              <span class="advantages-title">20</span>
-              <p class="overline advantages-overline">Kyiv’s best barbers</p>
-            </li>
+              <li class="list-item">
+                <span class="advantages-title">20</span>
+                <p class="overline advantages-overline">Kyiv’s best barbers</p>
+              </li>
 
-            <li class="list-item">
-              <span class="advantages-title">100</span>
-              <p class="overline advantages-overline">
-                Gifts for regular customers
+              <li class="list-item">
+                <span class="advantages-title">100</span>
+                <p class="overline advantages-overline">
+                  Gifts for regular customers
+                </p>
+              </li>
+            </ul>
+            <div class="advantages-info-wrapper">
+              <p class="overline overline-theme-light">
+                Old traditional school
               </p>
-            </li>
-          </ul>
-          <div class="advantages-info-wrapper">
-            <p class="overline overline-theme-light">Old traditional school</p>
-            <h2 class="section-title">&iquest;Why people come to us?</h2>
-            <p class="subtitle subtitle-theme-light">
-              Only good things are said about us. But it's better to see and
-              feel 1 time than read 10 times.
-            </p>
+              <h2 class="section-title">&iquest;Why people come to us?</h2>
+              <p class="subtitle subtitle-theme-light">
+                Only good things are said about us. But it's better to see and
+                feel 1 time than read 10 times.
+              </p>
+            </div>
           </div>
         </div>
       </section>
