--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <section class="hero">
         <div class="container hero-wrapper">
           <aside class="aside">
-            <ul class="list follow-list">
+            <ul class="list follow-list pseudo pseudo-aside">
               <li class="list-item follow-item">
                 <a href="" class="link follow-link">Instagram</a>
               </li>
@@ -74,7 +74,7 @@
           </aside>
           <div class="hero-content-wrapper">
             <div class="hero-content">
-              <p class="overline overline-theme-dark">
+              <p class="overline overline-theme-dark pseudo pseudo-theme-dark">
                 A hair salon for men in Kyiv
               </p>
               <h1 class="hero-title title-theme-dark">BarberShop</h1>
@@ -108,7 +108,9 @@
             </li>
           </ul>
           <div class="about-info-wrapper">
-            <p class="overline overline-theme-light">About</p>
+            <p class="overline overline-theme-light pseudo pseudo-theme-light">
+              About
+            </p>
             <h2 class="section-title">Best Barbershop in your city</h2>
             <p class="subtitle subtitle-theme-light">
               If you want to add more confidence to your image, you should
@@ -129,7 +131,7 @@
       </section>
       <section class="services section">
         <div class="container">
-          <p class="overline overline-theme-dark">
+          <p class="overline overline-theme-dark pseudo pseudo-theme-dark">
             Spend your time with the best masters
           </p>
           <h2 class="section-title title-theme-dark">Services and prices</h2>
@@ -213,7 +215,9 @@
               </li>
             </ul>
             <div class="advantages-info-wrapper">
-              <p class="overline overline-theme-light">
+              <p
+                class="overline overline-theme-light pseudo pseudo-theme-light"
+              >
                 Old traditional school
               </p>
               <h2 class="section-title">&iquest;Why people come to us?</h2>
@@ -227,7 +231,7 @@
       </section>
       <section class="barbers section">
         <div class="container">
-          <p class="overline overline-theme-light">
+          <p class="overline overline-theme-light pseudo pseudo-theme-light">
             For true enjoyers of the atmosphere
           </p>
           <h2 class="section-title">Our barbers</h2>
@@ -303,7 +307,7 @@
       <section class="works section">
         <div class="container">
           <h2 class="visually-hidden">Examples of work</h2>
-          <p class="overline overline-theme-light">
+          <p class="overline overline-theme-light pseudo pseudo-theme-light">
             In Latin, "barba" means "beard"
           </p>
           <ul class="list works-wrapper">
@@ -360,7 +364,7 @@
                     target="_blank"
                     rel="noopener noreferrer"
                     class="link address-text"
-                    >Darnytska Square, 1, Kyiv</a
+                    >Darnytska Sq., 1, Kyiv</a
                   >
                 </li>
 
@@ -379,7 +383,9 @@
                 </li>
               </ul>
             </address>
-            <p class="overline title-theme-dark">Working hours</p>
+            <p class="overline title-theme-dark pseudo pseudo-theme-dark">
+              Working hours
+            </p>
             <p class="info-text">Every day from 9:00 to 22:00</p>
           </div>
         </div>
@@ -388,7 +394,7 @@
     <footer>
       <div class="container footer-wrapper">
         <p class="copyright">&copy; Copyright 2020</p>
-        <ul class="list follow-list">
+        <ul class="list follow-list pseudo pseudo-aside">
           <li class="list-item follow-item">
             <a href="#" class="link follow-link">Instagram</a>
           </li>
